crates/swc_fast_ts_strip/tests/errors/ts-namespace.ts


namespace Foo {
    export const foo = 1;
}